  * liblzma: Install run-time library to /lib so it can be used
    before /usr is mounted.  Closes: #672120.
  * liblzma-dev: Install an appropriate library for static linking
    instead of the decompression-only version used to build xzdec.
    Thanks to Anton Tolchanov for a report.  Closes: #673001.
  * debian/rules:
    - Use dpkg-buildflags to retrieve compiler flags, including
      hardening options.  Build-Depends: dpkg-dev (>= 1.16.1~).
      Closes: #653739.
    - ./configure --disable-threads for now.
    - Simplify build-arch rule.
    - Rearrange for clarity.
  * debian/changelog.upstream.sh: Use ‘git rev-list | git diff-tree’
    instead of ‘git log’ for reliable output independent of the
    operator’s configuration.
  * xz-lzma: Avoid conflict with lzma as provided with the LZMA SDK.
    - Use update-alternatives to provide lzma, unlzma, lzcat,
      lzgrep, etc.
    - Only conflicts with lzma versions before 9.22-1, when it
      switched to using update-alternatives to provide lzma, unlzma,
      and lzcat.
  * xz-utils: Register directly as an alternative implementation for
    lzma compatibility commands.
    - No more xz-lzma package.
    - xz-utils gets xz-lzma's content and dependencies (replaces
      ancient lzip to avoid a file conflict, conflict with
      pre-alternatives lzma, provides lzma).
    - xz-utils conflicts with and is intended to replace xz-lzma.
  * xz-utils/README.Debian: Update instructions for choosing an
    implementation for the lzma compatibility commands.

 -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 17 May 2012 19:16:19 -0500

xz-utils (5.1.1alpha+20110809-3) unstable; urgency=low

  * liblzma: Match upstream ABI.
    - Remove the lzma_chunk_size() function.
    - A few ABI tweaks to reserved space in structures.
    - Enable ELF symbol versioning.
    - Bump soname to 5.
    - Continue to leave out threading support, since the relevant
      interfaces in liblzma are not yet stable.